<resources>
    <string name="app_name">AntNupTracker</string>
    <string name="flagged">Flagged</string>
    <string name="citizen">Citizen Scientist</string>
    <string name="myrmecologist">Myrmecologist</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="many">Many Queens</string>
    <string name="single">Single Queen</string>
    <string name="taxonomy_placeholder">Genus species</string>
    <string name="loc_placeholder">Location goes here</string>
    <string name="date_placeholder">Date goes here</string>
    <string name="author_placeholder">Author goes here</string>
    <string name="label_placeholder">Label Goes Here</string>
    <string name="content_placeholder">Content Goes Here</string>
    <!-- SECTION HEADERS FOR FLIGHT DETAIL -->
    <string name="basic_information_header">Basic Information</string>
    <string name="date_time_header">Date and Time of Flight</string>
    <string name="location_header">Flight Location</string>
    <string name="image_header">Image</string>
    <string name="recording_header">Recording Information</string>
    <string name="weather_header">Weather</string>
    <string name="comments_header">Comments</string>
    <string name="validation_header">Flight Validated</string>
    <string name="record_history_header">Record History</string>
    <!-- ROW HEADERS FOR FLIGHT DETAIL -->
    <string name="flight_id">Flight ID</string>
    <string name="genus">Genus</string>
    <string name="species">Species</string>
    <string name="species_confidence">Species Confidence</string>
    <string name="size_of_flight">Size of Flight</string>
    <string name="date_of_flight">Date of Flight</string>
    <string name="time_of_flight">Time of Flight</string>
    <string name="gps_coordinates">GPS Coordinates</string>
    <string name="within">Within ±</string>
    <string name="recorded_by">Recorded By</string>
    <string name="date_recorded">Date Recorded</string>
    <string name="time_recorded">Time Recorded</string>
    <string name="validated_by">Validated By</string>
    <string name="validated_time">Time of Validation</string>
    <string name="weather_for_flight">Flight Weather from OpenWeather Map</string>
    <string name="no_comments">No comments</string>
    <string name="record_history">Record History</string>
    <!-- COMMENT MANAGEMENT -->
    <string name="new_comment">New Comment</string>
    <string name="enter_comment">Enter your comment below.</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <!-- EXTRA FLIGHT FORM FIELDS -->
    <string name="change_date_and_time">Change Date and Time</string>
    <string name="change_location">Change Location on Map</string>
    <string name="upload_image">Upload Image</string>
    <string name="header_placeholder">Header Goes Here</string>
    <string name="more_detail">More details</string>
    <string name="comment_placeholder">Comment goes here</string>
    <string name="image_description">Flight image</string>
    <string name="title_activity_location_selection">Map</string>
    <string name="flight_detail">Flight Details for Flight %d</string>
    <string name="weather_description_header">Weather Description</string>
    <string name="weather_description">Description</string>
    <string name="weather_long_desc">Full Description</string>
    <string name="weather_flight_info_header">Flight Information</string>
    <string name="weather_time_retrieved">Time Retrieved</string>
    <string name="weather_footer">Weather information from OpenWeatherMap (https://openweathermap.org/), which is made available here under the Open Database License (ODbL) (https://opendatacommons.org/licenses/odbl/1-0/).</string>
    <string name="weather_details_header">Weather Details</string>
    <string name="weather_temperature">Temperature (°C)</string>
    <string name="weather_pressure">Pressure (hPa)</string>
    <string name="weather_humidity">Humidity (%)</string>
    <string name="weather_temp_min">Minimum Temperature (°C)</string>
    <string name="weather_temp_max">Maximum Temperature (°C)</string>
    <string name="weather_clouds">Clouds (%)</string>
    <string name="weather_day_header">Day Information</string>
    <string name="weather_sunrise">Sunrise</string>
    <string name="weather_sunset">Sunset</string>
    <string name="weather_rain_header">Rain Information</string>
    <string name="weather_rain1_header">1 hour (mm)</string>
    <string name="weather_rain3_header">3 hour (mm)</string>
    <string name="weather_wind_header">Wind Information</string>
    <string name="weather_wind_speed">Speed (m/s)</string>
    <string name="weather_wind_degree">Direction (°)</string>
    <string name="changelog_placeholder">History event goes here</string>
    <string name="flight_history_title">Record History</string>
    <string name="footer_placeholder">Footer goes here</string>
    <string name="username_label">Username</string>
    <string name="role_label">Role</string>
    <string name="institution_label">Institution/Affiliation</string>
    <string name="user_description_label">User Description</string>
    <string name="ant_image_description">Cartoon of an ant reproductive</string>
    <string name="login_welcome">Welcome to AntNupTracker</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="login_button_message">Sign In</string>
    <string name="create_account_button_message">Create Account</string>
    <string name="forgot_password_button_message">Forgot Password?</string>
    <string name="account_label">Account</string>
    <string name="login_or_create">Sign in or create account</string>
    <string name="ok">OK</string>
    <string name="empty_user_pass_title">Empty Username or Password</string>
    <string name="empty_user_pass_message">Please enter your username and password before continuing.</string>
    <string name="incorrect_credentials_title">Incorrect Credentials</string>
    <string name="incorrect_credentials_message">Your sign in credentials failed. Please try again or reset your password.</string>
    <string name="forbidden_access_title">Access Forbidden</string>
    <string name="forbidden_access_message">Your account is not active. Please contact us to reactivate your account.</string>
    <string name="json_parse_title">Parse Error</string>
    <string name="json_parse_message">Error parsing the response from the server. Please try again later. If the problem persists, please contact us.</string>
    <string name="no_response_title">Network Error</string>
    <string name="no_response_message">No response from the server. Please check your network connection and try again.</string>
    <string name="try_again">Try Again</string>
    <string name="other_login_error_title">Other Sign In Error</string>
    <string name="other_login_error_message">Error signing in (status=%d). Please try again later. If the problem persists, please contact us.</string>
    <string name="sign_in_title">Sign into AntNupTracker</string>
    <string name="no_user_selected">No User Selected</string>
    <string name="weather_title">Weather for Flight</string>
    <string name="user_title">Profile: %s</string>
    <string name="logged_in_as">You are signed in as %s.</string>
    <string name="not_logged_in">You are not signed in.</string>
    <string name="no_flight_selected">No Flight Selected</string>
    <string name="please_select_flight">Please select a flight before continuing.</string>
    <string name="please_select_user">Please select a user before continuing.</string>
    <string name="invalid_genus">Invalid genus selected</string>
    <string name="please_enter_genus">Please select a genus</string>
    <string name="please_enter_species">Please enter a valid species name</string>
    <string name="invalid_species">Invalid species name</string>
</resources>
