<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
            android:id="@+id/changelog_event_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/default_margin"
            android:text="@string/changelog_placeholder"
            style="@style/ChangelogText.Light"/>
    <TextView
            android:id="@+id/changelog_author_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/changelog_event_label"
            android:text="@string/author_placeholder"
            android:textColor="@color/colorPrimary"
            android:gravity="end"
            android:layout_marginVertical="@dimen/small_margin"
            android:layout_marginHorizontal="@dimen/default_margin"/>
    <TextView
            android:id="@+id/changelog_date_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/changelog_author_label"
            android:text="@string/date_placeholder"
            android:gravity="end"
            android:layout_marginVertical="@dimen/small_margin"
            android:layout_marginHorizontal="@dimen/default_margin"/>
</RelativeLayout>